--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "server": "nodemon server.js",
-    "style": "npx tailwindcss -i ./views/assets/css/input.css -o ./dist/output.css --watch"
+    "style": "npx tailwindcss -i ./views/assets/css/input.css -o ./dist/css/output.css --watch"
   },
   "keywords": [
     "EJS",
@@ -16,6 +16,7 @@
   "author": "hasin023",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "pg": "^8.11.3"
