--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
   "author": "hasin023",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "pg": "^8.11.3"
   },
   "devDependencies": {
+    "nodemon": "^3.1.0",
     "tailwindcss": "^3.4.1"
   }
 }
