--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.18.0",
     "formidable": "^3.5.1",
     "pg": "^8.11.3"
   },
