--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "formidable": "^3.5.1",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.11.3"
   },
   "devDependencies": {
