--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   },
   "keywords": [
     "EJS",
+    "TailwindCSS",
     "NodeJS",
-    "Postgresql",
-    "TailwindCSS"
+    "ExpressJS",
+    "Postgresql"
   ],
   "author": "hasin023",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
